--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "warn",
+      "no-useless-escape": "warn"
+    }
   },
   "browserslist": {
     "production": [
